src/test/resources/frontendReference/invalid/semanticErr/class/inheritance/classBadAssign.waccast
-- Compiling...
Errors detected during compilation! Exit code 200 returned.
Semantic Error at 29:2 -- Incompatible type at 'oldClass'. Expected type: CLASS d. Actual type: CLASS c.